; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/arm/extr_armass.c_iflag.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/arm/extr_armass.c_iflag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @iflag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iflag(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 0, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @r_str_case(i8* %6, i32 0)
  store i64 0, i64* %5, align 8
  br label %8

8:                                                ; preds = %30, %1
  %9 = load i64, i64* %5, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @strlen(i8* %10)
  %12 = icmp ult i64 %9, %11
  br i1 %12, label %13, label %33

13:                                               ; preds = %8
  %14 = load i8*, i8** %3, align 8
  %15 = load i64, i64* %5, align 8
  %16 = getelementptr inbounds i8, i8* %14, i64 %15
  %17 = load i8, i8* %16, align 1
  %18 = sext i8 %17 to i32
  switch i32 %18, label %28 [
    i32 97, label %19
    i32 105, label %22
    i32 102, label %25
  ]

19:                                               ; preds = %13
  %20 = load i32, i32* %4, align 4
  %21 = or i32 %20, 4
  store i32 %21, i32* %4, align 4
  br label %29

22:                                               ; preds = %13
  %23 = load i32, i32* %4, align 4
  %24 = or i32 %23, 2
  store i32 %24, i32* %4, align 4
  br label %29

25:                                               ; preds = %13
  %26 = load i32, i32* %4, align 4
  %27 = or i32 %26, 1
  store i32 %27, i32* %4, align 4
  br label %29

28:                                               ; preds = %13
  store i32 -1, i32* %2, align 4
  br label %35

29:                                               ; preds = %25, %22, %19
  br label %30

30:                                               ; preds = %29
  %31 = load i64, i64* %5, align 8
  %32 = add i64 %31, 1
  store i64 %32, i64* %5, align 8
  br label %8

33:                                               ; preds = %8
  %34 = load i32, i32* %4, align 4
  store i32 %34, i32* %2, align 4
  br label %35

35:                                               ; preds = %33, %28
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @r_str_case(i8*, i32) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
